--- a/projects/scatterplotdata/index.css
+++ b/projects/scatterplotdata/index.css
@@ -1,5 +1,5 @@
 * {
- 
+ background-color: white;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
 }
 
 svg {
-    background-color: wheat;
+    background-color: white;
 }
 
 .bar:hover {
